--- a/app/css/global.css
+++ b/app/css/global.css
@@ -8,3 +8,23 @@ body{
     font-size: 16px;
     background: #f5f5f5;
 }
+.rootElement .container{
+    padding: 1rem;
+}
+ .center{
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     width: 500px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+ }
+.center h1{
+    width: fit-content;
+}
+.center img{
+    width: 200px;
+}
